[gd_scene load_steps=3 format=3 uid="uid://dk3vkj6bgygqc"]

[ext_resource type="Script" path="res://Node2D.gd" id="1_65jd7"]
[ext_resource type="Texture2D" uid="uid://fab5m4u5f8cs" path="res://icon.svg" id="2_ggpl2"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_65jd7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(521, 369)
texture = ExtResource("2_ggpl2")

[node name="Button" type="Button" parent="."]
offset_left = 463.0
offset_top = 589.0
offset_right = 581.0
offset_bottom = 620.0
text = "Reset"

[node name="Label" type="Label" parent="."]
offset_left = 468.0
offset_top = 536.0
offset_right = 508.0
offset_bottom = 559.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 403.0
offset_top = 155.0
offset_right = 639.0
offset_bottom = 254.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="ColorRect" to="." method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_color_rect_mouse_exited"]
